2013-03-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix sauvola_ms test.

	* tests/binarization/sauvola_ms.cc,
	* tests/binarization/sauvola_ms.ref.pbm,
	* tests/binarization/sauvola_ms_weven_hodd.ref.pbm,
	* tests/binarization/sauvola_ms_wodd_heven.ref.pbm,
	* tests/binarization/sauvola_ms_wodd_hodd.ref.pbm: Make use of
	reference files in test.

2013-03-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix compilation issues.

	* scribo/binarization/local_threshold.hh,
	* scribo/core/central_sites.hh,
	* scribo/debug/save_table_image.hh,
	* scribo/filter/object_groups_with_holes.hh,
	* scribo/fun/v2b/objects_large_filter.hh,
	* scribo/make/influence_zone_graph.hh,
	* scribo/postprocessing/fill_object_holes.hh: Fix namespace
	ambiguities.

	* scribo/toolchain/text_in_doc_preprocess.hh: Fix arguments.

	* scribo/toolchain/internal/text_in_doc_preprocess_functor.hh,
	* scribo/util/integral_sub_sum_sum2_functor.hh: Use namespace mln.

	* scribo/util/compute_sub_domains.hh,
	* scribo/util/integral_sum_sum2_functor.hh,
	* scribo/util/integral_sum_sum2_global_min_functor.hh,
	* src/contest/hdibco-2010/sauvola_ms_hdibco.cc: Add missing
	include.

	* scribo/io/img/save.hh: Use box2d constructor.

2013-03-01  Guillaume Lazzara  <z@lrde.epita.fr>

	Rename point_at_index and index_of_point.

	* scribo/binarization/internal/niblack_functor_fast.hh,
	* scribo/binarization/internal/niblack_threshold_functor.hh,
	* scribo/binarization/internal/sauvola_functor.hh,
	* scribo/binarization/internal/sauvola_threshold_functor.hh,
	* scribo/binarization/internal/singh_functor.hh,
	* scribo/binarization/internal/wolf_functor_fast.hh,
	* scribo/binarization/sauvola_ms.hh,
	* scribo/util/init_integral_image.hh,
	* scribo/util/integral_sub_sum_sum2_functor.hh: Here.

2013-03-01  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/recognition.hh: Fix tesseract includes.

2013-01-28  Guillaume Lazzara  <z@lrde.epita.fr>

	Use io::magick to save output.

	* src/binarization/niblack.cc,